--- a/paymentApp/views/index.ejs
+++ b/paymentApp/views/index.ejs
@@ -35,7 +35,7 @@ $.ajax(settings).done(function (response) {
   $("button").show();
 
 var options = {
-    "key": "rzp_test_r6EJwrxJbscSv9", // Enter the Key ID generated from the Dashboard
+    "key": "key id", // Enter the Key ID generated from the Dashboard
     "amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
     "currency": "INR",
     "name": "Gown",
